[package]
authors = ["Simon Chervenak <sarras305@gmail.com>"]
edition = "2018"
name = "gaddag-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
with_std = ["indicatif", "rayon", "gtk", "glib", "gdk", "termion"]

[dependencies]
array-init = "0.1.1"
base64 = "0.13.0"
bincode = "1.3.1"
clap = {version = "2.33.3", features = ["yaml", "color"]}
gdk = {version = "0.13.2", optional = true}
glib = {version = "0.10.2", optional = true}
gtk = {version = "0.9.2", optional = true}
indicatif = {version = "0.15.0", optional = true}
itertools = "0.9.0"
petgraph = {version = "0.5.1", features = ["serde-1"]}
rand = "0.7.3"
rayon = {version = "1.4.0", optional = true}
relm = "0.20.0"
relm-derive = "0.20.0"
serde = {version = "1.0.116", features = ["derive"]}
termion = {version = "1.5.5", optional = true}

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin.rs"
required-features = ["with_std"]
